Se cambió el color de la lista
Se puso otro color que se cambiará al pasar el cursor por un elemento de la lista

--- a/miEstilo.css
+++ b/miEstilo.css
@@ -84,10 +84,12 @@ li a {
 }
 
 li a:hover {
-    background-color:#747474;
+    background-color:firebrick;
+        /*#747474*/
 }
 
 .style { 
   text-align: center;
 }
+
 
