--- a/miEstilo.css
+++ b/miEstilo.css
@@ -91,5 +91,9 @@ li a:hover {
 .style { 
   text-align: center;
 }
-
-
+div.cae_texto img{
+    width:200px;
+    height:200px;
+    float:left;
+    margin: 0 15px;
+}
